@@ -4,6 +4,7 @@ import static com.dotmarketing.portlets.contentlet.model.Contentlet.IDENTIFIER_K
 import static com.dotmarketing.portlets.contentlet.model.Contentlet.STRUCTURE_INODE_KEY;
 import static com.dotmarketing.util.importer.HeaderValidationCodes.HEADERS_NOT_FOUND;
 import static com.dotmarketing.util.importer.ImportLineValidationCodes.LANGUAGE_NOT_FOUND;
+import static com.liferay.util.StringPool.FORWARD_SLASH;
 
 import com.dotcms.content.elasticsearch.util.ESUtils;
 import com.dotcms.contenttype.business.ContentTypeAPI;
@@ -15,6 +16,7 @@ import com.dotcms.contenttype.transform.contenttype.StructureTransformer;
 import com.dotcms.contenttype.transform.field.LegacyFieldTransformer;
 import com.dotcms.repackage.com.csvreader.CsvReader;
 import com.dotcms.rest.api.v1.temp.DotTempFile;
+import com.dotcms.rest.api.v1.temp.TempFileAPI;
 import com.dotcms.util.LowerKeyMap;
 import com.dotcms.util.RelationshipUtil;
 import com.dotmarketing.beans.Host;
@@ -41,6 +43,8 @@ import com.dotmarketing.portlets.contentlet.business.HostAPI;
 import com.dotmarketing.portlets.contentlet.model.Contentlet;
 import com.dotmarketing.portlets.contentlet.model.ContentletDependencies;
 import com.dotmarketing.portlets.contentlet.model.IndexPolicy;
+import com.dotmarketing.portlets.fileassets.business.FileAsset;
+import com.dotmarketing.portlets.fileassets.business.FileAssetAPI;
 import com.dotmarketing.portlets.folders.business.FolderAPI;
 import com.dotmarketing.portlets.folders.model.Folder;
 import com.dotmarketing.portlets.htmlpageasset.business.HTMLPageAssetAPI;
@@ -89,6 +93,7 @@ import io.vavr.control.Try;
 import java.io.File;
 import java.io.IOException;
 import java.io.Reader;
+import java.net.URI;
 import java.net.URL;
 import java.sql.Savepoint;
 import java.sql.Timestamp;
@@ -106,6 +111,8 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
@@ -129,14 +136,16 @@ import org.apache.commons.lang3.tuple.Pair;
  */
 public class ImportUtil {
 
-    private static PermissionAPI permissionAPI = APILocator.getPermissionAPI();
-    private final static ContentletAPI conAPI = APILocator.getContentletAPI();
-    private final static CategoryAPI catAPI = APILocator.getCategoryAPI();
-    private final static LanguageAPI langAPI = APILocator.getLanguageAPI();
-    private final static HostAPI hostAPI = APILocator.getHostAPI();
-    private final static FolderAPI folderAPI = APILocator.getFolderAPI();
-    private final static WorkflowAPI workflowAPI = APILocator.getWorkflowAPI();
-    private final static ContentTypeAPI contentTypeAPI = APILocator.getContentTypeAPI(APILocator.systemUser());
+    private static final PermissionAPI permissionAPI = APILocator.getPermissionAPI();
+    private static final ContentletAPI conAPI = APILocator.getContentletAPI();
+    private static final CategoryAPI catAPI = APILocator.getCategoryAPI();
+    private static final LanguageAPI langAPI = APILocator.getLanguageAPI();
+    private static final HostAPI hostAPI = APILocator.getHostAPI();
+    private static final FolderAPI folderAPI = APILocator.getFolderAPI();
+    private static final WorkflowAPI workflowAPI = APILocator.getWorkflowAPI();
+    private static final ContentTypeAPI contentTypeAPI = APILocator.getContentTypeAPI(APILocator.systemUser());
+    private static final FileAssetAPI fileAssetAPI = APILocator.getFileAssetAPI();
+    private static final TempFileAPI tempFileAPI = APILocator.getTempFileAPI();
 
     public static final String KEY_WARNINGS = "warnings";
     public static final String KEY_ERRORS = "errors";
@@ -167,6 +176,10 @@ public class ImportUtil {
     private static final String DATE_FIELD_FORMAT_PATTERN = "yyyyMMdd";
     private static final String DATE_TIME_FIELD_FORMAT_PATTERN = "MM/dd/yyyy";
     private static final String TIME_FIELD_FORMAT_PATTERN = "HHmmss";
+
+    private ImportUtil() {
+        // Prevent instantiation
+    }
 
     /**
      * Imports the data contained in a CSV file into dotCMS. The data can be
@@ -579,12 +592,7 @@ public class ImportUtil {
     /**
      * Generates an import result from the provided input parameters after processing and analyzing
      * the file data and performing the necessary content operations.
-     *
-     * @param preview         a boolean flag indicating whether the operation is a preview or an
-     *                        actual import
-     * @param wfActionId      a string representing the workflow action ID associated with the
-     *                        import operation
-     * @param fileTotalLines  the total number of lines in the file being processed
+     * @param params         the parameters containing details about the import operation,
      * @param lineNumber      the number of lines successfully processed
      * @param failedRows      the number of rows that encountered errors during processing
      * @param messages        a list of validation messages containing information, warnings, or
@@ -1665,7 +1673,7 @@ public class ImportUtil {
         validateLineLength(line, headers, lineNumber);
 
         // Process fields and collect values
-        final var fieldResults = processFields(
+        final FieldsProcessingResult fieldResults = processFields(
                 line, headers, contentType, user, currentHostId, language, lineNumber
         );
 
@@ -1812,7 +1820,7 @@ public class ImportUtil {
                 }
             }
         }
-
+         //Here we save the contentlet(s) and process the results
         final ProcessedContentResult processResult = processContent(
                 lineNumber,
                 contentlets,
@@ -1831,6 +1839,7 @@ public class ImportUtil {
                 contentTypePermissions,
                 wfActionIdIndex,
                 preview,
+                currentHostId,
                 user,
                 request,
                 line
@@ -1909,8 +1918,8 @@ public class ImportUtil {
 
         for (Integer column : headers.keySet()) {
 
-            Field field = headers.get(column);
-            String value = line[column];
+            final Field field = headers.get(column);
+            final String value = line[column];
 
             try {
                 final var fieldResult = processField(field, value, user, currentHostId,
@@ -2021,23 +2030,25 @@ public class ImportUtil {
         if (isDateField(field)) {
             processedValue = validateDateTypes(field, value, value);
         } else if (isCategoryField(field)) {
-            Set<Category> categories = processCategoryField(field, value, user, results);
+            Set<Category> categories = validateCategoryField(field, value, user, results);
             processedValue = categories;
             results.addCategories(categories);
         } else if (isSelectionField(field)) {
-            processedValue = processSelectionField(field, value);
+            processedValue = validateSelectionField(field, value);
         } else if (isTextField(field)) {
-            processedValue = processTextField(value);
+            processedValue = validateTextField(value);
         } else if (isTextAreaField(field)) {
             processedValue = value;
         } else if (isLocationField(field)) {
-            Pair<Host, Folder> location = processLocationField(field, value, user);
+            Pair<Host, Folder> location = validateLocationField(field, value, user);
             processedValue = value;
             results.setSiteAndFolder(location);
         } else if (isBinaryField(field)) {
-            processedValue = processBinaryField(value);
+            //Binaries are loaded from an external source
+            processedValue = validateBinaryField(field, value);
         } else if (isFileField(field)) {
-            processedValue = processFileField(field, value, currentHostId, user, results);
+            // Files fields are images or file fields, they can be loaded from an external source or referenced by an internal path
+            processedValue = validateFileField(field, value, currentHostId, user);
         } else {
             processedValue = processDefaultField(value);
         }
@@ -2195,7 +2206,13 @@ public class ImportUtil {
      * Processes a category field from a CSV line.
      * <p>
      * This method validates and processes the category field, converting the comma-separated
-     * category keys into a set of Category objects. If any category key is invalid, an error is
+     * category keys into a set of Category objects.
+     * Each category must:
+     * <ul>
+     *   <li>Exist in the system</li>
+     *   <li>Be a descendant of the configured root category (i.e. within the allowed hierarchy)</li>
+     * </ul>
+     * If any category key is invalid, an error is
      * added to the resultBuilder and a DotRuntimeException is thrown.
      *
      * @param field         the field definition containing type and validation rules
@@ -2206,27 +2223,104 @@ public class ImportUtil {
      * @throws DotDataException     if a data access error occurs during processing
      * @throws DotSecurityException if a security violation occurs during processing
      */
-    private static Set<Category> processCategoryField(final Field field, final String value,
-            final User user, final FieldProcessingResultBuilder resultBuilder
+    private static Set<Category> validateCategoryField(
+            final Field field,
+            final String value,
+            final User user,
+            final FieldProcessingResultBuilder resultBuilder
     ) throws DotDataException, DotSecurityException {
+
         Set<Category> categories = new HashSet<>();
-        if (UtilMethods.isSet(value)) {
-            String[] categoryKeys = value.split(",");
-            for (String catKey : categoryKeys) {
-                Category cat = catAPI.findByKey(catKey.trim(), user, false);
-                if (cat == null) {
-                    throw ImportLineException.builder()
-                            .message("Invalid category key found")
-                            .code(ImportLineValidationCodes.INVALID_CATEGORY_KEY.name())
-                            .field(field.getVelocityVarName())
-                            .invalidValue(value)
-                            .build();
-                }
-                categories.add(cat);
-                resultBuilder.addCategory(cat);
-            }
+        if (!UtilMethods.isSet(value)) {
+            return categories;
         }
+
+        final Category configuredRootCategory = findConfiguredRootCategory(field, user);
+
+        // Defensive check — should not normally occur
+        if (configuredRootCategory == null) {
+            throw ImportLineException.builder()
+                    .message(String.format(
+                            "Root category configured for field '%s' could not be found. Please check the field configuration.",
+                            field.getVelocityVarName()
+                    ))
+                    .code(ImportLineValidationCodes.INVALID_CATEGORY_KEY.name())
+                    .field(field.getVelocityVarName())
+                    .invalidValue(value)
+                    .build();
+        }
+
+        String[] categoryKeys = value.split(",");
+        for (String catKey : categoryKeys) {
+            String key = catKey.trim();
+            Category cat = validateCategoryKey(key, configuredRootCategory, field, user);
+            categories.add(cat);
+            resultBuilder.addCategory(cat);
+        }
+
         return categories;
+    }
+
+
+    /**
+     * Given a field previously determined to be of type Category, this method retrieves
+     * the configured root category associated with that field.
+     * <p>
+     * The root category defines the top-level constraint under which all assigned
+     * categories must reside. If no such category is found, the method returns null.
+     *
+     * @param categoryField the field whose associated root category is to be retrieved
+     * @param user          the user performing the operation (for permission checks)
+     * @return the configured root Category for the field, or null if not found or inaccessible
+     */
+    private static Category findConfiguredRootCategory(final Field categoryField, final User user) {
+        Category category = null;
+        try {
+            category = catAPI.find(categoryField.getValues(), user, false);
+        } catch (final DotSecurityException | DotDataException e) {
+            Logger.error(ImportUtil.class, String.format(
+                    "User '%s' couldn't get the configured root Category from field '%s': %s",
+                    user != null ? user.getUserId() : null,
+                    categoryField.getCategoryId(),
+                    e.getMessage()), e);
+        }
+        return category;
+    }
+
+
+    /**
+     * Validates a single category key against the configured root category for a field.
+     * <p>
+     * This method ensures that:
+     * <ul>
+     *   <li>The category identified by the given key exists in the system</li>
+     *   <li>The category is a descendant (child, grandchild, etc.) of the specified root category</li>
+     * </ul>
+     * If the key is invalid, an {@link ImportLineException} is thrown with context for debugging.
+     *
+     * @param key           the raw category key to validate
+     * @param rootCategory  the root category that all valid categories must descend from
+     * @param field         the field definition this key is associated with (used for error reporting)
+     * @param user          the user performing the operation (used for permission checks)
+     * @return the valid {@link Category} object corresponding to the key
+     * @throws DotDataException     if a data access error occurs
+     * @throws DotSecurityException if a security or permission error occurs
+     * @throws ImportLineException  if the category does not exist or is not under the root category
+     */
+    private static Category validateCategoryKey(final String key, final Category rootCategory, final Field field, final User user) throws DotDataException, DotSecurityException {
+        Category cat = catAPI.findByKey(key, user, false);
+        if (cat == null || !catAPI.isParent(cat, rootCategory, user)) {
+            throw ImportLineException.builder()
+                    .message(String.format(
+                            "Invalid category key found: '%s'. It must exist and be a child of '%s'.",
+                            key, rootCategory.getCategoryName()
+                    ))
+                    .code(ImportLineValidationCodes.INVALID_CATEGORY_KEY.name())
+                    .field(field.getVelocityVarName())
+                    .invalidValue(key)
+                    .build();
+        }
+        return cat;
     }
 
     /**
@@ -2235,7 +2329,7 @@ public class ImportUtil {
      * @param value the value to process
      * @return the processed value, truncated to 255 characters if necessary
      */
-    private static Object processTextField(final String value) {
+    private static Object validateTextField(final String value) {
         if (value != null && value.length() > TEXT_FIELD_MAX_LENGTH) {
             return value.substring(0, TEXT_FIELD_MAX_LENGTH);
         }
@@ -2253,7 +2347,7 @@ public class ImportUtil {
      * @throws DotDataException     if a data access error occurs during processing
      * @throws DotSecurityException if a security violation occurs during processing
      */
-    private static Pair<Host, Folder> processLocationField(final Field field, final String value,
+    private static Pair<Host, Folder> validateLocationField(final Field field, final String value,
             final User user) throws DotDataException, DotSecurityException {
 
         Pair<Host, Folder> siteAndFolder = getSiteAndFolderFromIdOrName(value, user);
@@ -2276,14 +2370,46 @@ public class ImportUtil {
      * @return the processed value if the URL is valid
      * @throws ImportLineException if the URL is invalid
      */
-    private static Object processBinaryField(final String value) {
-        if (UtilMethods.isSet(value) && !APILocator.getTempFileAPI().validUrl(value)) {
+    private static Object validateBinaryField(final Field field, final String value) {
+        if (UtilMethods.isSet(value) && !tempFileAPI.validUrl(value)) {
             throw ImportLineException.builder()
                     .message("URL is malformed or Response is not 200")
                     .code(ImportLineValidationCodes.INVALID_BINARY_URL.name())
+                    .field(field.getVelocityVarName())
                     .invalidValue(value)
                     .build();
         }
+        return value;
+    }
+
+    /**
+     * Processes an image field by validating the URL.
+     * This method checks if the URL is valid and if the content is an image type.
+     * @param value the value to process
+     * @return the processed value if the URL is valid
+     */
+    private static Object processImageField(final Field field, final String value) {
+        //Validate if we're looking at an internal file path or a URL
+        //webAssetHelper.getAssetInfo()
+
+        if (UtilMethods.isSet(value) && !tempFileAPI.validUrl(value)) {
+            throw ImportLineException.builder()
+                    .message("URL is malformed or Response is not 200")
+                    .code(ImportLineValidationCodes.INVALID_BINARY_URL.name())
+                    .field(field.getVelocityVarName())
+                    .invalidValue(value)
+                    .build();
+        }
+
+        if (!UtilMethods.isImage(value)) {
+            throw ImportLineException.builder()
+                    .message(String.format(" %s is not a supported image type", value))
+                    .code(ImportLineValidationCodes.INVALID_BINARY_URL.name())
+                    .field(field.getVelocityVarName())
+                    .invalidValue(value)
+                    .build();
+        }
+
         return value;
     }
 
@@ -2294,26 +2420,57 @@ public class ImportUtil {
      * @param value         the raw value from the CSV line
      * @param currentHostId the ID of the current host
      * @param user          the user performing the import
-     * @param resultBuilder the builder to accumulate validation messages and results
      * @return the contentlet identifier if the file is valid, null otherwise
      * @throws DotDataException     if a data access error occurs during processing
      * @throws DotSecurityException if a security violation occurs during processing
      */
-    private static Object processFileField(final Field field, final String value,
-            final String currentHostId, final User user,
-            final FieldProcessingResultBuilder resultBuilder
+    private static Object validateFileField(final Field field, final String value,
+            final String currentHostId, final User user
     ) throws DotDataException, DotSecurityException {
-        String filePath = value;
-        if (Field.FieldType.IMAGE.toString().equals(field.getFieldType()) && !UtilMethods.isImage(
-                filePath)) {
-            if (UtilMethods.isSet(filePath)) {
-                resultBuilder.addWarning(String.format(
-                                "The file is not an image for field: %s", field.getVelocityVarName()),
-                        ImportLineValidationCodes.INVALID_IMAGE_TYPE.name());
+        //Here we need to determine if the value is a valid internal file path or an external URL
+        final boolean isUrl = UtilMethods.isValidStrictURL(value);
+        if (!isUrl) {
+            final Optional<String> internal = matchWithInternalIdentifier(value, currentHostId, user);
+            if (internal.isPresent()) {
+                // We found a matching object
+                return internal.get();
+            } else {
+               //Throw validation error as failed to match the given path with an internal object
+                throw ImportLineException.builder()
+                        .message("Invalid internal file path")
+                        .code(ImportLineValidationCodes.INVALID_FILE_PATH.name())
+                        .field(field.getVelocityVarName())
+                        .invalidValue(value)
+                        .build();
             }
-            return null;
-        }
+        } else {
+            // If it's a URL, we need to validate if we can access it
+            if (!tempFileAPI.validUrl(value)) {
+                throw ImportLineException.builder()
+                        .message("URL is malformed or Response is not 200")
+                        .code(ImportLineValidationCodes.INVALID_BINARY_URL.name())
+                        .field(field.getVelocityVarName())
+                        .invalidValue(value)
+                        .build();
+            }
 
+            // if the URL is valid, we can return it as is
+            return value;
+        }
+    }
+
+    /**
+     * Matches a given value with an internal identifier.
+     * @param value the value to match, which can be a file path or URL
+     * @param currentHostId the ID of the current host
+     * @param user the user performing the import
+     * @return an Optional containing the contentlet identifier if a match is found,
+     * @throws DotDataException if a data access error occurs during processing
+     * @throws DotSecurityException if a security violation occurs during processing
+     */
+    private static Optional<String> matchWithInternalIdentifier(final String value, final String currentHostId, final User user) throws DotDataException, DotSecurityException {
+        //Here we need to determine if the value is a valid file path or URL
+        String filePath = value;
         Host fileHost = hostAPI.find(currentHostId, user, false);
         if (filePath.contains(StringPool.COLON)) {
             String[] fileInfo = filePath.split(StringPool.COLON);
@@ -2331,23 +2488,18 @@ public class ImportUtil {
                             APILocator.getLanguageAPI().getDefaultLanguage().getId(),
                             user, false);
             if (cont != null && InodeUtils.isSet(cont.getInode())) {
-                return cont.getIdentifier();
+                return Optional.of(cont.getIdentifier());
             }
-            resultBuilder.addWarning(String.format(
-                            "The file has not been found in %s:%s",
-                            fileHost.getHostname(), filePath
-                    ), ImportLineValidationCodes.FILE_NOT_FOUND.name()
-            );
         }
-        return null;
+        return Optional.empty();
     }
 
-    /**
-     * Processes a default field by escaping HTML text if necessary.
-     *
-     * @param value the value to process
-     * @return the processed value, with HTML text escaped if necessary
-     */
+        /**
+         * Processes a default field by escaping HTML text if necessary.
+         *
+         * @param value the value to process
+         * @return the processed value, with HTML text escaped if necessary
+         */
     private static Object processDefaultField(final String value) {
         return Config.getBooleanProperty("CONTENT_ESCAPE_HTML_TEXT", true) ?
                 UtilMethods.escapeUnicodeCharsForHTML(value) : value;
@@ -2414,14 +2566,14 @@ public class ImportUtil {
      * @implNote For checkbox fields, returns Boolean.TRUE if value contains "true", "yes" or "1",
      *           Boolean.FALSE otherwise. Other field types return null for unmatched values
      */
-    private static Object processSelectionField(final Field field, final String value) {
+    private static Object validateSelectionField(final Field field, final String value) {
         if (UtilMethods.isSet(value)) {
             String fieldEntriesString = field.getValues() != null ? field.getValues() : "";
             String[] fieldEntries = fieldEntriesString.split("\n");
 
             for (String fieldEntry : fieldEntries) {
-                String[] splittedValue = fieldEntry.split("\\|");
-                String entryValue = splittedValue[splittedValue.length - 1].trim();
+                String[] splitValue = fieldEntry.split("\\|");
+                String entryValue = splitValue[splitValue.length - 1].trim();
 
                 if (entryValue.equals(value) || value.contains(entryValue)) {
                     return value;
@@ -3049,6 +3201,7 @@ public class ImportUtil {
             final List<Permission> contentTypePermissions,
             final int wfActionIdIndex,
             final boolean preview,
+            final String siteId,
             final User user,
             final HttpServletRequest request,
             final String[] line
@@ -3058,22 +3211,13 @@ public class ImportUtil {
 
         for (Contentlet cont : contentlets) {
 
-            //Clean up any existing workflow action
-            cont.resetActionId();
-
-            // Handle workflow action ID from file
-            if (wfActionIdIndex >= 0) {
-                String wfActionIdStr = line[wfActionIdIndex];
-                if (UtilMethods.isSet(wfActionIdStr)) {
-                    cont.setActionId(wfActionIdStr);
-                }
-            }
+            setWorkflowAction(wfActionIdIndex, line, cont);
 
             // Set site and folder
             setSiteAndFolder(user, cont, siteAndFolder);
 
             // Set field values
-            processContentFields(cont, headers, values, request, preview);
+            processContentFields(cont, headers, values, request, siteId, user, preview);
 
             // Retaining Categories when content updated with partial imports
             if (UtilMethods.isSet(cont.getIdentifier())) {
@@ -3109,6 +3253,24 @@ public class ImportUtil {
         }
 
         return resultBuilder.build();
+    }
+
+    /**
+     * Sets the workflow action ID for a contentlet based on the provided index and line data.
+     * @param wfActionIdIndex The index of the workflow action ID in the line data.
+     * @param line
+     * @param cont
+     */
+    private static void setWorkflowAction(int wfActionIdIndex, String[] line, Contentlet cont) {
+        //Clean up any existing workflow action
+        cont.resetActionId();
+        // Handle workflow action ID from file
+        if (wfActionIdIndex >= 0) {
+            String wfActionIdStr = line[wfActionIdIndex];
+            if (UtilMethods.isSet(wfActionIdStr)) {
+                cont.setActionId(wfActionIdStr);
+            }
+        }
     }
 
     /**
@@ -3153,7 +3315,7 @@ public class ImportUtil {
                 conAPI.validateContentlet(cont, null, new ArrayList<>(categories), true);
             }
         } catch (DotContentletValidationException ex) {
-            final String code = getMappedCode(ex);
+            final String code = getErrorMappedCode(ex);
             throw ImportLineException.builder()
                     .message(ex.getMessage())
                     .code(code)
@@ -3169,7 +3331,7 @@ public class ImportUtil {
      * @param ex The exception to extract the code from.
      * @return The mapped error code as a string.
      */
-    private static String getMappedCode(final DotContentletValidationException ex) {
+    private static String getErrorMappedCode(final DotContentletValidationException ex) {
         String code = ImportLineValidationCodes.UNKNOWN_ERROR.name();
         if (null != ex.getNotValidRelationship() && !ex.getNotValidRelationship().isEmpty()) {
             code = ImportLineValidationCodes.RELATIONSHIP_VALIDATION_ERROR.name();
@@ -3235,6 +3397,8 @@ public class ImportUtil {
             final Map<Integer, Field> headers,
             final Map<Integer, Object> values,
             final HttpServletRequest request,
+            final String siteId,
+            final User user,
             final boolean preview
     ) throws IOException, DotSecurityException {
 
@@ -3257,7 +3421,9 @@ public class ImportUtil {
 
             try {
                 if (isBinaryField(field)) {
-                    processBinaryField(cont, field, value, request, preview);
+                    fetchAndSetBinaryField(cont, field, value, request, preview);
+                } else if (isFileField(field)) {
+                    fetchAndSetFileField(cont, field, value, request, siteId, user, preview);
                 } else {
                     conAPI.setContentletProperty(cont, field, value);
                 }
@@ -3433,7 +3599,7 @@ public class ImportUtil {
      *
      * @param value The raw value of the binary field from the CSV line.
      */
-    private static void processBinaryField(final Contentlet cont, final Field field,
+    private static void fetchAndSetBinaryField(final Contentlet cont, final Field field,
             final Object value, final HttpServletRequest request, final boolean preview)
             throws IOException, DotSecurityException {
         if (preview) {
@@ -3441,11 +3607,132 @@ public class ImportUtil {
                     new File(ConfigUtils.getAssetTempPath()));
             cont.setBinary(field.getVelocityVarName(), dummyFile);
         } else if (value != null && UtilMethods.isSet(value.toString())) {
-            DotTempFile tempFile = APILocator.getTempFileAPI()
-                    .createTempFileFromUrl(null, request, new URL(value.toString()), -1);
+            final URL url = URI.create(value.toString()).toURL();
+            final DotTempFile tempFile = tempFileAPI
+                    .createTempFileFromUrl(null, request, url, -1);
             cont.setBinary(field.getVelocityVarName(), tempFile.file);
         }
     }
+
+    /**
+     * Fetches and sets an image field in the contentlet.
+     * @param cont Contentlet with processed field values
+     * @param field Field to check
+     * @param value Value to set for the image field
+     * @param request HTTP request object, used for context
+     * @param preview Boolean flag indicating if this is a preview operation
+     */
+    private static void fetchAndSetFileField(final Contentlet cont, final Field field,
+            final Object value, final HttpServletRequest request, final String siteId, final User user, final boolean preview) {
+        if (value != null && UtilMethods.isSet(value.toString())) {
+            final String uriOrIdentifier = value.toString();
+            // First we need to determine if we're looking at an internal Path or an external URL
+            // if we're looking at an url we attempt a fetch
+            if (UtilMethods.isValidStrictURL(uriOrIdentifier)) {
+                try {
+                    final Host currentHost = Host.SYSTEM_HOST.equals(siteId) ?
+                            hostAPI.findDefaultHost(APILocator.systemUser(),false) :
+                            hostAPI.find(siteId, APILocator.systemUser(), false);
+                    final ContentType contentType = contentTypeAPI.find(
+                            FileAssetAPI.DEFAULT_FILE_ASSET_STRUCTURE_VELOCITY_VAR_NAME);
+                    final URI uri = URI.create(uriOrIdentifier);
+
+                    // Create a file asset from the temporary file or retrieve the existing one
+                    final Contentlet fileAsset = getFileAsset(uri, request, contentType, currentHost, user);
+
+                    // Set the image field in the contentlet to the identifier of the file asset
+                    // That's how image fields are constructed
+                    cont.setProperty(field.getVelocityVarName(), fileAsset.getIdentifier());
+
+                } catch (Exception e) {
+                    Logger.error(ImportUtil.class, "Error setting image field", e);
+                    throw ImportLineException.builder()
+                            .message("Error processing file asset from URL: " + uriOrIdentifier + " under site: " + siteId)
+                            .code(ImportLineValidationCodes.INVALID_LOCATION.name())
+                            .invalidValue(uriOrIdentifier)
+                            .build();
+                }
+            } else {
+                cont.setProperty(field.getVelocityVarName(), uriOrIdentifier);
+            }
+        }
+    }
+
+    /**
+     * Retrieves or creates a file asset from a given URI.
+     * @param uri The URI of the file to be processed.
+     * @param request The HTTP request object, used to fetch the file.
+     * @param contentType The content type for the file asset, used to define its structure.
+     * @param site The default host where the file asset will be stored.
+     * @return A Contentlet object representing the file asset, either retrieved or created.
+     * @throws DotDataException If there is a data-related exception during the process.
+     * @throws DotSecurityException If the user does not have permission to access the requested
+     * @throws IOException If an I/O error occurs while fetching the file.
+     */
+    private static Contentlet getFileAsset(final URI uri, HttpServletRequest request, final ContentType contentType,
+            final Host site, final User user)
+            throws DotDataException, DotSecurityException, IOException {
+        final long langId = langAPI.getDefaultLanguage().getId();
+
+        final String fileName = UtilMethods.fileName(uri);
+
+        // Use filename + host as key since we're checking for filename existence on that host
+        final String fileKey = fileName + ":" + site.getIdentifier();
+        final ReentrantLock reentrantLock = fileLocks.computeIfAbsent(fileKey, k -> new ReentrantLock());
+
+        reentrantLock.lock();
+        try {
+            final Folder root = folderAPI.findFolderByPath(FORWARD_SLASH,
+                    site, APILocator.systemUser(), false);
+
+            final boolean exists = fileAssetAPI.fileNameExists(site, root, fileName);
+            if (exists) {
+                //Check if user has permission to access the file
+                final FileAsset file = fileAssetAPI.getFileByPath(FORWARD_SLASH + fileName,
+                        site, langId, false);
+                if (!permissionAPI.doesUserHavePermission(file, PermissionAPI.PERMISSION_READ, user)) {
+                    throw new DotSecurityException("User does not have permission to read the existing file: " + fileName);
+                }
+                return file;
+            }
+            // if we determine that the file does not exist, we proceed to fetch it
+            final DotTempFile tempFile = APILocator.getTempFileAPI().createTempFileFromUrl(null, request, uri.toURL(), -1);
+            final File file = tempFile.file;
+
+            // And create a new file asset from the temporary file we fetched
+            final Contentlet fileAsset = new Contentlet();
+            fileAsset.setContentType(contentType);
+            fileAsset.setLanguageId(langId);
+            fileAsset.setHost(site.getIdentifier());
+            fileAsset.setFolder(root.getInode());
+            fileAsset.setProperty(FileAssetAPI.TITLE_FIELD, file.getName());
+            fileAsset.setProperty(FileAssetAPI.FILE_NAME_FIELD, file.getName());
+            fileAsset.setProperty(FileAssetAPI.BINARY_FIELD, file);
+
+            final Contentlet savedFileAsset = conAPI.checkin(fileAsset, user, false);
+            conAPI.publish(savedFileAsset, user, false);
+
+            return savedFileAsset;
+
+        } finally {
+            reentrantLock.unlock();
+            // Cleanup if no threads are waiting
+            if (!reentrantLock.hasQueuedThreads()) {
+                fileLocks.remove(fileKey, reentrantLock);
+            }
+        }
+    }
+
+    private static final ConcurrentHashMap<String, ReentrantLock> fileLocks = new ConcurrentHashMap<>();
+
+    /**
+     * Creates a Contentlet object representing a file asset from the provided temporary file.
+     * @param tempFile The temporary file containing the uploaded file data.
+     * @param contentType The content type for the file asset, used to define its structure.
+     * @param defaultHost The default host where the file asset will be stored.
+     * @return A Contentlet object representing the file asset, populated with necessary properties.
+     */
+
 
     /**
      * Retrieves all category-related fields from the specified content structure based on its
@@ -4740,9 +5027,14 @@ public class ImportUtil {
         }
 
         public void addWarning(final String message, final String code) {
+            addWarning(message, code, "N/A");
+        }
+
+        public void addWarning(final String message, final String code, final String field) {
             addValidationMessage(ValidationMessage.builder()
                     .type(ValidationMessageType.WARNING)
                     .message(message)
+                    .field(field)
                     .code(code)
                     .lineNumber(lineNumber)
                     .build());
